--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
     </section>
   </main>
 
+  <section class="breed">
+    
+  </section>
+
   <footer class="mt-auto">
     <section class="upper__footer ">
       <div class="footer-container container">
@@ -109,10 +113,10 @@
           <p class="py-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam at dolorum maiores placeat
             modi expedita quae alias molestiae, velit labore.</p>
           <ul class="d-flex gap-3 p-0">
-            <li><a href="">SHOP FOR DOG</a></li>
-            <li><a href="">SHOP FOR CAT</a></li>
-            <li><a href="">OUR STORY</a></li>
-            <li><a href="">CONTACT US</a></li>
+            <li><a href="#">SHOP FOR DOG</a></li>
+            <li><a href="#">SHOP FOR CAT</a></li>
+            <li><a href="#">OUR STORY</a></li>
+            <li><a href="#">CONTACT US</a></li>
           </ul>
           <ul class="social-media-icons d-flex gap-3 p-0">
             <li><i class="fa-brands fa-instagram"></i></li>
